refactor code, adding monthly report
