# internal/report/model.go
@@ -1,0 +1,11 @@
+package report
+
+type ReportDTO struct {
+	Year  int `json:"year"`
+	Month int `json:"month"`
+}
+
+type Serv struct {
+	IdSer int    `json:"idSer"`
+	Name  string `json:"name"`
+}
